--- a/apps/templates/pages/tool/generalindex.html
+++ b/apps/templates/pages/tool/generalindex.html
@@ -27,7 +27,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'AGSToExcel' %}" role="tablist">
-                  <i class="material-icons">timeline</i> Run the app
+                  <i class="material-icons">timeline</i>  Run
                 </a>
               </li>
             </ul>
@@ -64,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'AGSValidator' %}" role="tablist">
-                  <i class="material-icons">timeline</i> Run the app
+                  <i class="material-icons">timeline</i>  Run
                 </a>
               </li>
             </ul>
