--- a/apps/templates/pages/tool/index.html
+++ b/apps/templates/pages/tool/index.html
@@ -27,7 +27,7 @@
               {%if not user_name == "" %}
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link21" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               {% endif %}
@@ -94,7 +94,7 @@
               {%if not user_name == "" %}
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link31" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               {% endif %}
@@ -181,7 +181,7 @@
               {%if not user_name == "" %}
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link41" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               {% endif %}
